--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -21,7 +21,7 @@
     <div class="breadcrumb-wrapper bg-light-2">
       <div class="container">
         <ol class="breadcrumb-list">
-          <li><a href="#">Home</a></li>
+          <li><%= link_to "Home", root_path %></li>
           <li><span>本を売る</span></li>
         </ol>
       </div>
