--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -5,9 +5,9 @@
   <div class="breadcrumb-wrapper bg-light-2">
     <div class="container">
       <ol class="breadcrumb-list booking-step">
-        <li><a href="">トップページ</a></li>
-        <li><a href="#">詳細画面</a></li>
-        <li><span>お支払い</span></li>
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "詳細ページ", book_path(@book) %></li>
+        <li><span>購入手続き</span></li>
       </ol>
     </div>
   </div>
