--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,14 @@
       </div>
     </div>
   </div>
+  <div class="breadcrumb-wrapper bg-light-2">
+    <div class="container">
+      <ol class="breadcrumb-list booking-step">
+        <li><%= link_to "Home", root_path %></li>
+        <li><span>マイページ</span></li>
+      </ol>
+    </div>
+  </div>
 
   <!-- end Page title -->
 
