related_book-of-book#show

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -193,7 +193,7 @@
             <div class="column-item">
               <div class="form-group">
                 <%= form_tag books_search_path, method: :get %>
-                <%= select_tag :category, options_for_select(["HTML CSS", "Ruby", "JavaScript", "Ruby on Rails", "PHP", "Java"]), class:"select select2-multi form-control", include_blank:true, prompt:"カテゴリを選択"%>
+                <%= select_tag :category, options_for_select(["HTML CSS", "Ruby", "JavaScript", "Ruby on Rails", "PHP", "Java", "Python", "C", "Swift", "その他"]), class:"select select2-multi form-control", include_blank:true, prompt:"カテゴリを選択"%>
               </div>
             </div>
             <div class="column-item" id="long-column-item">
