--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -93,60 +93,11 @@
                   </div>
                   <div class="GridLex-gap-20-wrappper package-grid-item-wrapper on-page-result-page alt-smaller">
                     <div class="GridLex-grid-noGutter-equalHeight">
-                      <div class="GridLex-col-4_sm-4_xs-12 mb-20">
-                        <div class="package-grid-item">
-                          <a href="#">
-                            <div class="image">
-                              <img src="images/books/book9.jpg" alt="Tour Package" />
-                              <div class="absolute-in-image">
-                                <div class="duration"><span>デザイン</span></div>
-                              </div>
-                            </div>
-                            <div class="content clearfix">
-                              <h6>だから、そのデザインはダメなんだ。</h6>
-                              <div class="absolute-in-content">
-                                <div class="price">$1500</div>
-                              </div>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-                      <div class="GridLex-col-4_sm-4_xs-12 mb-20">
-                        <div class="package-grid-item">
-                          <a href="#">
-                            <div class="image">
-                              <img src="images/books/book9.jpg" alt="Tour Package" />
-                              <div class="absolute-in-image">
-                                <div class="duration"><span>デザイン</span></div>
-                              </div>
-                            </div>
-                            <div class="content clearfix">
-                              <h6>だから、そのデザインはダメなんだ。</h6>
-                              <div class="absolute-in-content">
-                                <div class="price">$1500</div>
-                              </div>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-                      <div class="GridLex-col-4_sm-4_xs-12 mb-20">
-                        <div class="package-grid-item">
-                          <a href="#">
-                            <div class="image">
-                              <img src="images/books/book9.jpg" alt="Tour Package" />
-                              <div class="absolute-in-image">
-                                <div class="duration"><span>デザイン</span></div>
-                              </div>
-                            </div>
-                            <div class="content clearfix">
-                              <h6>だから、そのデザインはダメなんだ。</h6>
-                              <div class="absolute-in-content">
-                                <div class="price">$1500</div>
-                              </div>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
+                      <% if @related_books %>
+                        <% @related_books.each do |book| %>
+                          <%= render partial:"books/related_book", locals:{book: book} %>
+                        <% end %>
+                      <% end %>
                     </div>
                   </div>
                 </div>
