--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -38,19 +38,19 @@
                 <div class="payment-traveller mb-0">
                   <div class="form-horizontal">
                     <div class="form-group gap-20">
-                      <label class="col-sm-4 col-md-4 control-label">姓</label>
+                      <label class="col-sm-4 col-md-4 control-label">姓:</label>
                       <div class="col-sm-8 col-md-6">
                         <!-- <input type="text" class="form-control" value="#{@user.last_name}"> -->
-                        <%= f.text_field :last_name, class:"form-control" %>
+                        <%= f.text_field :last_name, class:"form-control", required: true %>
                       </div>
                     </div>
                   </div>
                   <div class="form-horizontal">
                     <div class="form-group gap-20">
-                      <label class="col-sm-4 col-md-4 control-label">名</label>
+                      <label class="col-sm-4 col-md-4 control-label">名:</label>
                       <div class="col-sm-8 col-md-6">
                         <!-- <input type="text" class="form-control" value="じょうじ"> -->
-                        <%= f.text_field :first_name, class:"form-control" %>
+                        <%= f.text_field :first_name, class:"form-control", required: true %>
                       </div>
                     </div>
                   </div>
@@ -59,7 +59,7 @@
                       <label class="col-sm-4 col-md-4 control-label">郵便番号:</label>
                       <div class="col-sm-8 col-md-6">
                         <!-- <input type="text" class="form-control" value="150-0042"> -->
-                        <%= f.text_field :postal_code, class:"form-control" %>
+                        <%= f.text_field :postal_code, class:"form-control", required: true %>
                       </div>
                     </div>
                   </div>
@@ -67,7 +67,7 @@
                     <div class="form-group gap-20">
                       <label class="col-sm-4 col-md-4 control-label">住所:</label>
                       <div class="col-sm-8 col-md-6">
-                        <%= f.text_field :street_address, class:"form-control" %>
+                        <%= f.text_field :street_address, class:"form-control", required: true %>
                         <!-- <input type="text" class="form-control" value="東京都渋谷区道玄坂2丁目"> -->
                       </div>
                     </div>
@@ -76,7 +76,7 @@
                     <div class="form-group gap-20">
                       <label class="col-sm-4 col-md-4 control-label">電話番号:</label>
                       <div class="col-sm-8 col-md-6">
-                        <%= f.text_field :phone_number, class:"form-control" %>
+                        <%= f.text_field :phone_number, class:"form-control", required: true %>
                         <!-- <input type="text" class="form-control" value="東京都渋谷区道玄坂2丁目"> -->
                       </div>
                     </div>
@@ -84,6 +84,66 @@
                 </div>
                 <div class="text-center">
                   <%= f.submit "購入者情報を更新", class:"btn btn-primary btn-sm btn-inverse" %>
+                  <!-- <button class="btn btn-primary btn-sm btn-inverse">購入者情報の編集</button> -->
+                </div>
+              </div>
+            </div>
+          <% end %>
+          <%= form_for(@bank) do |f| %>
+            <div class="payment-box">
+              <div class="payment-header clearfix">
+                <h5 class="heading mt-0">売上金受け取り口座情報</h5>
+              </div>
+              <div class="payment-content">
+                <div class="payment-traveller mb-0">
+                  <div class="form-horizontal">
+                    <div class="form-group gap-20">
+                      <label class="col-sm-4 col-md-4 control-label">銀行名:</label>
+                      <div class="col-sm-8 col-md-6">
+                        <!-- <input type="text" class="form-control" value="#{@user.last_name}"> -->
+                        <%= f.text_field :bank_name, class:"form-control", placeholder:"テック銀行", required: true %>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-horizontal">
+                    <div class="form-group gap-20">
+                      <label class="col-sm-4 col-md-4 control-label">支店名:</label>
+                      <div class="col-sm-8 col-md-6">
+                        <!-- <input type="text" class="form-control" value="じょうじ"> -->
+                        <%= f.text_field :branch_name, class:"form-control", placeholder:"テック支店", required: true %>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-horizontal">
+                    <div class="form-group gap-20">
+                      <label class="col-sm-4 col-md-4 control-label">口座種別:</label>
+                      <div class="col-sm-8 col-md-6">
+                        <!-- <input type="text" class="form-control" value="150-0042"> -->
+                        <%= f.select :account_type, options_for_select(["普通", "当座", "貯蓄"]), class:"select select2-multi form-control" %>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-horizontal">
+                    <div class="form-group gap-20">
+                      <label class="col-sm-4 col-md-4 control-label">口座番号:</label>
+                      <div class="col-sm-8 col-md-6">
+                        <%= f.text_field :number, class:"form-control", placeholder:"0123456", required: true, pattern:"[0-9]{7}", title:"半角数字7文字" %>
+                        <!-- <input type="text" class="form-control" value="東京都渋谷区道玄坂2丁目"> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-horizontal">
+                    <div class="form-group gap-20">
+                      <label class="col-sm-4 col-md-4 control-label">口座名義(カナ(半角スペース)カナ):</label>
+                      <div class="col-sm-8 col-md-6">
+                        <%= f.text_field :holder_name, class:"form-control", placeholder:"テック(半角スペース)タロウ", required: true, pattern:"^[ァ-ン| | ]+$", title:"全角カタカナ" %>
+                        <!-- <input type="text" class="form-control" value="東京都渋谷区道玄坂2丁目"> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="text-center">
+                  <%= f.submit "受け取り口座情報を更新", class:"btn btn-primary btn-sm btn-inverse" %>
                   <!-- <button class="btn btn-primary btn-sm btn-inverse">購入者情報の編集</button> -->
                 </div>
               </div>
@@ -98,7 +158,7 @@
                 <div class="payment-traveller mb-0">
                   <div class="form-horizontal">
                     <div class="form-group gap-20">
-                      <label class="col-sm-4 col-md-4 control-label">ニックネーム</label>
+                      <label class="col-sm-4 col-md-4 control-label">ニックネーム:</label>
                       <div class="col-sm-8 col-md-6">
                         <!-- <input type="text" class="form-control" value="#{@user.last_name}"> -->
                         <%= f.text_field :username, class:"form-control", value:"#{@user.username}" %>
@@ -141,8 +201,6 @@
             <% end %>
           </div>
         </div>
-
-
         <div class="col-sm-4 col-md-4 mt-50-xs">
           <aside class="sidebar">
             <div class="sidebar-inner no-border for-blog">
