--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -37,7 +37,7 @@
                         <label class="col-sm-4 col-md-4 control-label"><spna class="necessary-info">*</spna>姓:</label>
                         <div class="col-sm-6 col-md-6">
                           <!-- <input type="text" class="form-control" value=<%=@address.last_name%> -->
-                          <%= text_field_tag "order_detail[last_name]", "#{@address.last_name}", class:"form-control" %>
+                          <%= text_field_tag "order_detail[last_name]", "#{@address.last_name}", class:"form-control", required: true %>
                         </div>
                       </div>
                     </div>
@@ -46,7 +46,7 @@
                         <label class="col-sm-4 col-md-4 control-label"><spna class="necessary-info">*</spna>名:</label>
                         <div class="col-sm-6 col-md-6">
                           <!-- <input type="text" class="form-control" value=<%=@address.first_name%> -->
-                          <%= text_field_tag "order_detail[first_name]", "#{@address.first_name}", class:"form-control" %>
+                          <%= text_field_tag "order_detail[first_name]", "#{@address.first_name}", class:"form-control", required: true %>
                         </div>
                       </div>
                     </div>
@@ -55,7 +55,7 @@
                         <label class="col-sm-4 col-md-4 control-label"><spna class="necessary-info">*</spna>メールアドレス:</label>
                         <div class="col-sm-6 col-md-6">
                           <!-- <input type="email" class="form-control" value=<%=current_user.email%> -->
-                          <%= text_field_tag "order_detail[email]", "#{current_user.email}", class:"form-control" %>
+                          <%= text_field_tag "order_detail[email]", "#{current_user.email}", class:"form-control", required: true %>
                         </div>
                       </div>
                     </div>
@@ -63,7 +63,7 @@
                       <div class="form-group gap-20">
                         <label class="col-sm-4 col-md-4 control-label">電話番号:</label>
                         <div class="col-sm-6 col-md-6">
-                          <%= text_field_tag "order_detail[phone_number]", "#{@address.phone_number}", class:"form-control" %>
+                          <%= text_field_tag "order_detail[phone_number]", "#{@address.phone_number}", class:"form-control", required: true %>
                           <!-- <input type="email" class="form-control" value="<%=@address.phone_number%>"> -->
                         </div>
                       </div>
@@ -72,7 +72,7 @@
                       <div class="form-group gap-20">
                         <label class="col-sm-4 col-md-4 control-label"><spna class="necessary-info">*</spna>郵便番号:</label>
                         <div class="col-sm-6 col-md-6">
-                          <%= text_field_tag "order_detail[postal_code]", "#{@address.postal_code}", class:"form-control" %>
+                          <%= text_field_tag "order_detail[postal_code]", "#{@address.postal_code}", class:"form-control", required: true %>
                           <!-- <input type="email" class="form-control" value=<%=@address.postal_code%> -->
                         </div>
                       </div>
@@ -81,7 +81,7 @@
                       <div class="form-group gap-20">
                         <label class="col-sm-4 col-md-4 control-label"><spna class="necessary-info">*</spna>住所:</label>
                         <div class="col-sm-6 col-md-6">
-                          <%= text_field_tag "order_detail[street_address]", "#{@address.street_address}", class:"form-control" %>
+                          <%= text_field_tag "order_detail[street_address]", "#{@address.street_address}", class:"form-control", required: true %>
                           <!-- <input type="email" class="form-control" value=<%=@address.street_address%> -->
                         </div>
                       </div>
