--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,6 +4,12 @@
 <div class="main-wrapper scrollspy-container">
   <!-- start end Page title -->
   <div class="page-title" style="background-image:url('/assets/my_room.jpeg');">
+          <% if notice %>
+          <p class="alert alert-notice"><%= notice %></p>
+        <% end %>
+        <% if alert %>
+         <p class="alert alert-error"><%= alert %></p>
+        <% end %>
     <div class="container">
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
