--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,11 @@
     <div class="container">
       <ol class="breadcrumb-list booking-step">
         <li><%= link_to "Home", root_path %></li>
-        <li><span>マイページ</span></li>
+        <%if @user == current_user%>
+          <li><span>マイページ</span></li>
+        <%else%>
+          <li><span><%= @user.username %>さんのページ</span></li>
+          <% end %>
       </ol>
     </div>
   </div>
@@ -33,115 +37,122 @@
 </div>
 <!-- end Back To Top -->
 
-
-<div class="clear"></div>
-<!-- start Main Wrapper -->
-  <div class="content-wrapper">
+<% if @user.id == current_user.id %>
+  <div class="clear"></div>
+  <!-- start Main Wrapper -->
+    <div class="content-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-md-9">
+            <div class="confirmation-wrapper">
+  <!--             <div class="clearfix mb-20">
+                <div class="col-xs-8 col-md-4 pl-0">
+                  <img src="/assets/books/book1.png" alt="">
+                </div>
+              </div> -->
+              <div class="confirmation-content">
+                <div class="section-title text-left">
+                  <h4>登録情報</h4>
+                </div>
+                <ul class="book-sum-list">
+                  <li><span class="font600">ユーザーネーム: </span> <%= @user.username %> 様</li>
+                  <li><span class="font600">email: </span><%= @user.email %></li>
+                </ul>
+              </div>
+              <% if @user.address %>
+                <div class="confirmation-content">
+                  <div class="section-title text-left">
+                    <h4>購入者情報</h4>
+                  </div>
+                  <ul class="book-sum-list">
+                    <li><span class="font600">苗字: </span> <%= @user.address.last_name %></li>
+                    <li><span class="font600">名前: </span> <%= @user.address.first_name %></li>
+                    <li><span class="font600">電話番号: </span><%= @user.address.phone_number %></li>
+                    <li><span class="font600">郵便番号: </span><%= @user.address.postal_code %></li>
+                    <li><span class="font600">住所: </span><%= @user.address.street_address %></li>
+                  </ul>
+                </div>
+              <% end %>
+              <%if @user.bank %>
+                <div class="confirmation-content">
+                  <div class="section-title text-left">
+                    <h4>売上金受け取り口座情報</h4>
+                  </div>
+                  <ul class="book-sum-list">
+                    <li><span class="font600">口座名: </span> <%= @user.bank.bank_name %></li>
+                    <li><span class="font600">支店名: </span> <%= @user.bank.branch_name %></li>
+                    <li><span class="font600">口座種別: </span><%= @user.bank.account_type %></li>
+                    <li><span class="font600">口座番号: </span><%= @user.bank.number %></li>
+                    <li><span class="font600">口座名義: </span><%= @user.bank.holder_name %></li>
+                  </ul>
+                </div>
+              <% end %>
+              <div class="text-right">
+  <!--             <%=button_to "編集する", edit_user_path(@user), class:"btn btn-primary btn-inverse",method: :get%> -->
+              <%= link_to "編集する", edit_user_path(@user), class:"anchor btn btn-primary btn-inverse", method: :get%>
+              <%= link_to "トップページへ", root_path, class:"anchor btn btn-primary"%>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section class="bg-light new-books">
     <div class="container">
       <div class="row">
-        <div class="col-sm-8 col-md-9">
-          <div class="confirmation-wrapper">
-<!--             <div class="clearfix mb-20">
-              <div class="col-xs-8 col-md-4 pl-0">
-                <img src="/assets/books/book1.png" alt="">
-              </div>
-            </div> -->
-            <div class="confirmation-content">
-              <div class="section-title text-left">
-                <h4>登録情報</h4>
-              </div>
-              <ul class="book-sum-list">
-                <li><span class="font600">ユーザーネーム: </span> <%= @user.username %> 様</li>
-                <li><span class="font600">email: </span><%= @user.email %></li>
-              </ul>
-            </div>
-            <% if @user.address %>
-              <div class="confirmation-content">
-                <div class="section-title text-left">
-                  <h4>購入者情報</h4>
-                </div>
-                <ul class="book-sum-list">
-                  <li><span class="font600">苗字: </span> <%= @user.address.last_name %></li>
-                  <li><span class="font600">名前: </span> <%= @user.address.first_name %></li>
-                  <li><span class="font600">電話番号: </span><%= @user.address.phone_number %></li>
-                  <li><span class="font600">郵便番号: </span><%= @user.address.postal_code %></li>
-                  <li><span class="font600">住所: </span><%= @user.address.street_address %></li>
-                </ul>
-              </div>
-            <% end %>
-            <%if @user.bank %>
-              <div class="confirmation-content">
-                <div class="section-title text-left">
-                  <h4>売上金受け取り口座情報</h4>
-                </div>
-                <ul class="book-sum-list">
-                  <li><span class="font600">口座名: </span> <%= @user.bank.bank_name %></li>
-                  <li><span class="font600">支店名: </span> <%= @user.bank.branch_name %></li>
-                  <li><span class="font600">口座種別: </span><%= @user.bank.account_type %></li>
-                  <li><span class="font600">口座番号: </span><%= @user.bank.number %></li>
-                  <li><span class="font600">口座名義: </span><%= @user.bank.holder_name %></li>
-                </ul>
-              </div>
-            <% end %>
-            <div class="text-right">
-<!--             <%=button_to "編集する", edit_user_path(@user), class:"btn btn-primary btn-inverse",method: :get%> -->
-            <%= link_to "編集する", edit_user_path(@user), class:"anchor btn btn-primary btn-inverse", method: :get%>
-            <%= link_to "トップページへ", root_path, class:"anchor btn btn-primary"%>
-          </div>
+        <div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+          <div class="section-title">
+            <h3>お気に入り一覧</h3>
+            <p>お気に入りされた技術書の一覧です。</p>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-<section class="bg-light new-books">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-        <div class="section-title">
-          <h3>お気に入り一覧</h3>
-          <p>お気に入りされた技術書の一覧です。</p>
+      <div class="GridLex-gap-30-wrappper package-grid-item-wrapper">
+        <div class="GridLex-grid-noGutter-equalHeight">
+          <% @favorite_books.each do |book| %>
+            <%= render partial:"books/book", locals:{book: book} %>
+          <% end %>
         </div>
       </div>
-    </div>
-    <div class="GridLex-gap-30-wrappper package-grid-item-wrapper">
-      <div class="GridLex-grid-noGutter-equalHeight">
-        <% @favorite_books.each do |book| %>
-          <%= render partial:"books/book", locals:{book: book} %>
-        <% end %>
+      <div class="text-center">
+        <%= paginate @favorite_books %>
       </div>
     </div>
-    <div class="text-center">
-      <%= paginate @favorite_books %>
-    </div>
-  </div>
-<section class="bg-light new-books">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-        <div class="section-title">
-          <h3>購入一覧</h3>
-          <p>購入された技術書の一覧です。</p>
+  </section>
+  <section class="bg-light new-books">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+          <div class="section-title">
+            <h3>購入一覧</h3>
+            <p>購入された技術書の一覧です。</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="GridLex-gap-30-wrappper package-grid-item-wrapper">
-      <div class="GridLex-grid-noGutter-equalHeight">
-        <% @bought_books.each do |book| %>
-          <%= render partial:"books/book", locals:{book: book} %>
-        <% end %>
+      <div class="GridLex-gap-30-wrappper package-grid-item-wrapper">
+        <div class="GridLex-grid-noGutter-equalHeight">
+          <% @bought_books.each do |book| %>
+            <%= render partial:"books/book", locals:{book: book} %>
+          <% end %>
+        </div>
+      </div>
+      <div class="text-center">
+        <%= paginate @bought_books %>
       </div>
     </div>
-    <div class="text-center">
-      <%= paginate @bought_books %>
-    </div>
-  </div>
+  </section>
+<%end%>
 <section class="bg-light new-books">
   <div class="container">
     <div class="row">
       <div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
         <div class="section-title">
-          <h3>出品一覧</h3>
+          <h3>
+            <%if @user != current_user%>
+              <%= @user.username %>さんの
+            <% end %>
+            出品一覧</h3>
           <p>出品された技術書の一覧です。</p>
         </div>
       </div>
