--- a/app/views/books/_search_book.html.erb
+++ b/app/views/books/_search_book.html.erb
@@ -5,7 +5,7 @@
       <div class="image">
         <%= image_tag book.image, alt:"Tour Package" %>
         <div class="absolute-in-image">
-          <% if book.orders.present? %>
+          <% if book.order.present? %>
             <%= image_tag "/assets/sold.png", class:"soldout" %>
           <% end %>
           <div class="duration"><span><%= book.category %></span></div>
