--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -105,3 +105,12 @@
 .hide{
   display:none;
 }
+
+.preImg{
+  width:250px;
+  height:300px;
+  z-index:2;
+  position:relative;
+  top:-300px;
+  opacity:0;
+}
