--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -24,8 +24,9 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-3 col-xs-12   mb-50-xs">
-              <div class="scrollspy-sidebar sidebar-detail" role="complementary">
-                <%= f.file_field :image, id:'protoInput', required: true%>
+              <div class="scrollspy-sidebar sidebar-detail js-imgInput" role="complementary">
+                <%= image_tag f.object.image, class:'js-imgView'%>
+                <%= f.file_field :image, class:'preImg', type:"file" %>
               </div>
             </div>
             <div class="col-md-9 mt-30-xs" role="main">
