--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -31,8 +31,9 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-3 col-xs-12   mb-50-xs">
-              <div class="scrollspy-sidebar sidebar-detail" role="complementary">
-                <%= f.file_field :image, id:'protoInput', required: true%>
+              <div class="scrollspy-sidebar sidebar-detail js-imgInput" role="complementary">
+                <%= f.file_field :image, required: true, type:"file"%>
+                <img src="/assets/no_image.jpg" alt="" class="js-imgView">
               </div>
             </div>
             <div class="col-md-9 mt-30-xs" role="main">
