--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -114,3 +114,97 @@
   top:-300px;
   opacity:0;
 }
+
+.comment{
+  width:350px;
+  border-radius:5px;
+  padding:10px;
+  margin:15px 0 0 0;
+  background-color:#F5F5F5;
+  border-radius:5px;
+}
+
+.seller-comment{
+  float:right;
+  text-align:right;
+}
+
+.seller-comment-body{
+  position:relative;
+  right:30px;
+  width:350px;
+  background-color:#F5F5F5;
+}
+.seller-comment-body:after  {
+  border:10px solid transparent;
+  border-bottom-color:#F5F5F5;
+  border-top-width:0;
+  top:-10px;
+  content:"";
+  display:block;
+  right:10px;
+  position:absolute;
+  width:0;
+}
+.other-comment-body{
+  position:relative;
+  left:10px;
+  width:350px;
+  background-color:#F5F5F5;
+}
+.other-comment-body:after  {
+  border:10px solid transparent;
+  border-bottom-color:#F5F5F5;
+  border-top-width:0;
+  top:-10px;
+  content:"";
+  display:block;
+  left:10px;
+  position:absolute;
+  width:0;
+}
+
+.my-comment-body{
+  position:relative;
+  left:10px;
+  width:350px;
+  background-color:rgba(51,204,153,0.2);
+}
+.my-comment-body:after  {
+  border:10px solid transparent;
+  border-bottom-color:rgba(51,204,153,0.2);
+  border-top-width:0;
+  top:-10px;
+  content:"";
+  display:block;
+  left:10px;
+  position:absolute;
+  width:0;
+}
+.my-seller-comment-body{
+  position:relative;
+  right:30px;
+  width:350px;
+  background-color:#FAEBD7;
+}
+.my-seller-comment-body:after  {
+  border:10px solid transparent;
+  border-bottom-color:#FAEBD7;
+  border-top-width:0;
+  top:-10px;
+  content:"";
+  display:block;
+  right:10px;
+  position:absolute;
+  width:0;
+}
+
+#comment_index{
+  margin-top:20px;
+  padding-top:20px;
+  border-top:1px solid #FAEBD7;
+}
+
+.media-body{
+  color:#333;
+}
