--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,11 @@
 <!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
   <!-- start end Page title -->
+  <% if notice %>
+    <p class="alert alert-notice"><%= notice %></p>
+  <% elsif alert %>
+    <p class="alert alert-error"><%= alert %></p>
+  <% end %>
   <div class="page-title" style="background-image:url('/assets/my_room.jpeg');">
     <div class="container">
       <div class="row">
